--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==23.2.1
 amqp==5.2.0
 annotated-types==0.6.0
 anyio==3.7.1
+async-timeout==4.0.3
 billiard==4.2.0
 celery==5.3.6
 certifi==2023.11.17
@@ -32,6 +33,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
+redis==5.0.1
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
